gh-pages to pull

--- a/language/variables.html
+++ b/language/variables.html
@@ -684,10 +684,7 @@ the scope the program was in when the statement was encountered.</p>
   <span class="n">RETURN</span> <span class="n">sum</span> <span class="o">/</span> <span class="n">inputList</span><span class="o">:</span><span class="n">LENGTH</span><span class="p">.</span>
 <span class="p">}.</span>
 
-<span class="n">SET</span> <span class="n">testList</span> <span class="n">TO</span> <span class="n">LIST</span><span class="p">();</span>
-<span class="nl">testList:</span><span class="n">ADD</span><span class="p">(</span><span class="mi">5</span><span class="p">).</span>
-<span class="nl">testList:</span><span class="n">ADD</span><span class="p">(</span><span class="mi">10</span><span class="p">).</span>
-<span class="nl">testList:</span><span class="n">ADD</span><span class="p">(</span><span class="mi">15</span><span class="p">).</span>
+<span class="n">SET</span> <span class="n">testList</span> <span class="n">TO</span> <span class="n">LIST</span><span class="p">(</span><span class="mi">5</span><span class="p">,</span><span class="mi">10</span><span class="p">,</span><span class="mi">15</span><span class="p">);</span>
 <span class="n">print</span> <span class="s">&quot;average is &quot;</span> <span class="o">+</span> <span class="n">calcAverage</span><span class="p">(</span><span class="n">testList</span><span class="p">).</span>
 <span class="n">print</span> <span class="s">&quot;but out here where it&#39;s global, sum is still &quot;</span> <span class="o">+</span> <span class="n">sum</span><span class="p">.</span>
 </pre></div>
