build for hvacengi's new pidloop and steeringhelper

--- a/commands/flight/pilot.html
+++ b/commands/flight/pilot.html
@@ -276,7 +276,7 @@
 </table>
 <span class="target" id="ship-control-pilotmainthrottle"></span><dl class="object">
 <dt>
-<tt class="descname">SHIP:CONTROL:MAINTHROTTLE</tt></dt>
+<tt class="descname">SHIP:CONTROL:PILOTMAINTHROTTLE</tt></dt>
 <dd><p>Returns the pilot&#8217;s input for the throttle. This is the only <tt class="docutils literal"><span class="pre">PILOT</span></tt> variable that is settable and is used to set the throttle upon termination of the current <strong>kOS</strong> program.</p>
 </dd></dl>
 
