--- a/structures/vessels/aggregateresource.html
+++ b/structures/vessels/aggregateresource.html
@@ -188,7 +188,7 @@
 <span class="n">LIST</span> <span class="n">RESOURCES</span> <span class="n">IN</span> <span class="n">RESLIST</span><span class="p">.</span>
 <span class="n">FOR</span> <span class="n">RES</span> <span class="n">IN</span> <span class="n">RESLIST</span> <span class="p">{</span>
     <span class="n">PRINT</span> <span class="s">&quot;Resource &quot;</span> <span class="o">+</span> <span class="n">RES</span><span class="o">:</span><span class="n">NAME</span><span class="p">.</span>
-    <span class="n">PRINT</span> <span class="s">&quot;    value = &quot;</span> <span class="o">+</span> <span class="n">AMOUNT</span><span class="p">.</span>
+    <span class="n">PRINT</span> <span class="s">&quot;    value = &quot;</span> <span class="o">+</span> <span class="n">RES</span><span class="o">:</span><span class="n">AMOUNT</span><span class="p">.</span>
     <span class="n">PRINT</span> <span class="s">&quot;    which is &quot;</span>
           <span class="o">+</span> <span class="n">ROUND</span><span class="p">(</span><span class="mi">100</span><span class="o">*</span><span class="n">RES</span><span class="o">:</span><span class="n">AMOUNT</span><span class="o">/</span><span class="n">RES</span><span class="o">:</span><span class="n">CAPACITY</span><span class="p">)</span>
           <span class="o">+</span> <span class="s">&quot;% full.&quot;</span><span class="p">.</span>
@@ -200,7 +200,7 @@
 <span class="n">SET</span> <span class="n">RESLIST</span> <span class="n">TO</span> <span class="n">STAGE</span><span class="o">:</span><span class="n">RESOURCES</span><span class="p">.</span>
 <span class="n">FOR</span> <span class="n">RES</span> <span class="n">IN</span> <span class="n">RESLIST</span> <span class="p">{</span>
     <span class="n">PRINT</span> <span class="s">&quot;Resource &quot;</span> <span class="o">+</span> <span class="n">RES</span><span class="o">:</span><span class="n">NAME</span><span class="p">.</span>
-    <span class="n">PRINT</span> <span class="s">&quot;    value = &quot;</span> <span class="o">+</span> <span class="n">AMOUNT</span><span class="p">.</span>
+    <span class="n">PRINT</span> <span class="s">&quot;    value = &quot;</span> <span class="o">+</span> <span class="n">RES</span><span class="o">:</span><span class="n">AMOUNT</span><span class="p">.</span>
     <span class="n">PRINT</span> <span class="s">&quot;    which is &quot;</span>
           <span class="o">+</span> <span class="n">ROUND</span><span class="p">(</span><span class="mi">100</span><span class="o">*</span><span class="n">RES</span><span class="o">:</span><span class="n">AMOUNT</span><span class="o">/</span><span class="n">RES</span><span class="o">:</span><span class="n">CAPACITY</span><span class="p">)</span>
           <span class="o">+</span> <span class="s">&quot;% full.&quot;</span><span class="p">.</span>
